--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,11 @@
+# npm
+*.pyc
+node_modules/
+db.sqlite3
+assets/bundles
+*.save
+
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
