--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,9 @@
 dj-database-url==0.4.2
 Django==1.10.5
+djangorestframework==3.6.3
 gunicorn==19.7.1
 olefile==0.44
 Pillow==4.2.1
 psycopg2==2.7.1
+Pygments==2.2.0
 whitenoise==3.3.0
